# hggd_humble

./: .gitignore
docker/: Dockerfile  compose.yml
grasp_pose_detection/: package.xml  setup.cfg  setup.py
grasp_pose_detection/grasp_pose_detection/: grasp_planner.py  grasp_pose_service.py  image_hggd.py
grasp_pose_detection/launch/: hggd_launch.py
grasp_pose_detection/srv/: GetGraspPose.srv
