<?xml version="1.0"?>
<package format="3">
  <name>grasp_pose_detection</name>
  <version>0.0.2</version>
  <description>ROS2 nodes for online grasp detection with HGGD (camera topics, per-object top-K).</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build system (Python package) -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <depend>visualization_msgs</depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <build_depend>moveit_msgs</build_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <!-- Python deps commonly needed at runtime (installed via pip/apt in your image) -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
